# video-scene-splitter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
benchmarks/: async_io_benchmark.py  end_to_end_benchmark.py  gpu_benchmark.py  hardware_decode_benchmark.py  nvenc_benchmark.py  scene_detection_benchmark.py
tests/: __init__.py  conftest.py  test_detection.py  test_detection_gpu.py  test_gpu_utils.py  test_splitter.py  test_utils.py  test_video_processor.py
video_scene_splitter/: __init__.py  detection.py  detection_gpu.py  gpu_utils.py  splitter.py  utils.py  video_processor.py
